--- a/WorkerDemo/WorkerDemo.csproj
+++ b/WorkerDemo/WorkerDemo.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
     </ItemGroup>
 </Project>
